--- a/CSS/uxdCSS.css
+++ b/CSS/uxdCSS.css
@@ -22,14 +22,6 @@
 
 header{
 	grid-area: header;
-	display: grid;
-	grid-template-columns: repeat(1, 1 fr);
-	grid-template-rows: repeat(3, 1 fr);
-	grid-template-areas: 
-		"logo" 
-		"nav"
-		"intro";
-	padding: 1em;
 	background-image: url(../IMG/Backgrounds/50.jpg);
 	background-size: cover;
 }
@@ -38,7 +30,7 @@ header{
 	grid-area: logo;
 	align-self: center;
 	text-align: center;
-	padding-right: 50px;
+	padding: 50px 0;
 }
 
 .navDiv{
@@ -53,8 +45,8 @@ header{
 article{
 	grid-area: article;
 	display: grid;
-	grid-template-columns: repeat(1, 1 fr);
-	grid-template-rows: repeat(3, 1 fr);
+	grid-template-columns: auto;
+	grid-template-rows: auto;
 	grid-template-areas: 
 		"descText"
 		"projectsHeading"
@@ -90,7 +82,7 @@ footer{
 
 nav{
 	text-align: center;
-	padding: 2em 2em 0 2em;
+	font-size: 3em;
 }
 
 nav ul{
@@ -100,7 +92,6 @@ nav ul{
 nav ul li{
 	display: block;
 	padding: 0.5em;
-	font-size: 2em;
 }
 
 a{
@@ -109,7 +100,8 @@ a{
 }
 
 nav ul li a:link {
-    color: white;  
+    color: white;
+	padding: 1vw;
 }
 
 nav ul li a:hover {
@@ -122,7 +114,7 @@ nav ul li a:active {
 
 
 h1{
-	font-size: 5vw;
+	font-size: 10vw;
 	font-weight: 200;
 	padding-top: 2.5em;
 	padding-bottom: 1em;
@@ -164,7 +156,7 @@ h2{
 	line-height: 2em;
 	font-size: 1.5em;
 	display: inline-block;
-	padding: 1vw;
+	margin: 1vw;
 }
 
 .quoteDiv{
@@ -271,34 +263,48 @@ h3{
 		align-self: center;
 		text-align: center;
 		padding: 2em 2em 0 2em;
+		font-size: 1.2em;
+	}
+	
+	h1{
+		font-size: 5vw;
 	}
 	
 	nav ul li{
 		display: inline-block;
 		padding: 0.5em;
 	}
+	
+	nav ul li a:link {
+    	color: white;
+		background-color: transparent;
+		padding: auto;
+	}
 }
 
 @media only screen and (min-width: 1300px) {
     
 	header{
-		grid-template-columns: repeat(2, 1 fr);
-		grid-template-rows: repeat(2, 1 fr);
+		display: grid;
+		grid-template-columns: auto;
+		grid-template-rows: auto;
 		grid-template-areas: 
 			"logo nav"
 			"intro intro";
+		padding: 1em;
 	}
 	
 	nav{
 		align-self: end;
 		text-align: right;
 		padding: 2em 2em 0 2em;
+		font-size: 1.2em;
 	}
 	
 	.LogoDiv{
 		align-self: flex-start;
 		text-align: left;
-		padding-left: 0px;
+		padding: 0px;
 	}
 	
 	.flexcontainer{
