--- a/CSS/uxdCSS.css
+++ b/CSS/uxdCSS.css
@@ -251,8 +251,8 @@ h3{
 
 @media only screen and (min-width: 1000px) {
     header{
-		grid-template-columns: repeat(1, 1 fr);
-		grid-template-rows: repeat(3, 1 fr);
+		grid-template-columns: auto;
+		grid-template-rows: auto;
 		grid-template-areas: 
 			"logo" 
 			"nav"
@@ -276,8 +276,6 @@ h3{
 	}
 	
 	nav ul li a:link {
-    	color: white;
-		background-color: transparent;
 		padding: auto;
 	}
 }
