--- a/CSS/indexCSS.css
+++ b/CSS/indexCSS.css
@@ -22,14 +22,6 @@
 
 header{
 	grid-area: header;
-	display: grid;
-	grid-template-columns: repeat(1, 1 fr);
-	grid-template-rows: repeat(3, 1 fr);
-	grid-template-areas: 
-		"logo" 
-		"nav"
-		"headline";
-	padding: 1em;
 	background-image: url(../IMG/Backgrounds/64.jpg);
 	background-size: cover;
 }
@@ -38,7 +30,7 @@ header{
 	grid-area: logo;
 	align-self: center;
 	text-align: center;
-	padding-right: 50px;
+	padding: 50px 0;
 }
 
 .navDiv{
@@ -94,10 +86,8 @@ footer{
 /* None Grid Related Content */
 
 nav{
-	align-self: center;
 	text-align: center;
-	font-size: 1.2em;
-	padding: 2em 2em 0 2em;
+	font-size: 3em;
 }
 
 nav ul{
@@ -115,7 +105,8 @@ a{
 }
 
 nav ul li a:link {
-    color: white;  
+    color: white; 
+	padding: 1vw;
 }
 
 nav ul li a:hover {
@@ -128,7 +119,7 @@ nav ul li a:active {
 
 
 h1{
-	font-size: 5vw;
+	font-size: 10vw;
 	font-weight: 200;
 	padding-top: 4em;
 	padding-bottom: 2em;
@@ -190,7 +181,7 @@ h2{
 
 
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1000px) {
     header{
 		grid-template-columns: repeat(1, 1 fr);
 		grid-template-rows: repeat(3, 1 fr);
@@ -203,8 +194,8 @@ h2{
 	nav{
 		align-self: center;
 		text-align: center;
-		font-size: 1.2em;
 		padding: 2em 2em 0 2em;
+		font-size: 1.5em;
 	}
 	
 	nav ul li{
@@ -212,11 +203,19 @@ h2{
 		padding: 0.5em;
 	}
 	
+	nav ul li a:link {
+		padding: auto;
+	}
+	
+	h1{
+		font-size: 5vw;
+	}
+	
 	article{
 		grid-area: article;
 		display: grid;
-		grid-template-columns: repeat(4, 1 fr);
-		grid-template-rows: repeat(3, 1 fr);
+		grid-template-columns: auto;
+		grid-template-rows: auto;
 		grid-template-areas:
 			". intro intro ."
 			". uxd photo ."
@@ -241,24 +240,26 @@ h2{
 @media only screen and (min-width: 1300px) {
     
 	header{
-		grid-template-columns: repeat(2, 1 fr);
-		grid-template-rows: repeat(3, 1 fr);
+		display: grid;
+		grid-template-columns: auto;
+		grid-template-rows: auto;
 		grid-template-areas: 
 			"logo nav"
 			"headline headline";
+		padding: 1em;
 	}
 	
 	nav{
 		align-self: end;
 		text-align: right;
-		font-size: 1.2em;
 		padding: 2em 2em 0 2em;
+		font-size: 1.2em;
 	}
 	
 	.LogoDiv{
 		align-self: flex-start;
 		text-align: left;
-		padding-left: 0px;
+		padding: 0px;
 	}
 	
 	.uxd{
