--- a/CSS/uxdCSS.css
+++ b/CSS/uxdCSS.css
@@ -22,14 +22,6 @@
 
 header{
 	grid-area: header;
-	display: grid;
-	grid-template-columns: repeat(1, 1 fr);
-	grid-template-rows: repeat(3, 1 fr);
-	grid-template-areas: 
-		"logo" 
-		"nav"
-		"intro";
-	padding: 1em;
 	background-image: url(../IMG/Backgrounds/50.jpg);
 	background-size: cover;
 }
@@ -38,7 +30,7 @@ header{
 	grid-area: logo;
 	align-self: center;
 	text-align: center;
-	padding-right: 50px;
+	padding: 50px 0;
 }
 
 .navDiv{
@@ -90,8 +82,7 @@ footer{
 
 nav{
 	text-align: center;
-	font-size: 1.2em;
-	padding: 2em 2em 0 2em;
+	font-size: 3em;
 }
 
 nav ul{
@@ -123,7 +114,7 @@ nav ul li a:active {
 
 
 h1{
-	font-size: 5vw;
+	font-size: 10vw;
 	font-weight: 200;
 	padding-top: 2.5em;
 	padding-bottom: 1em;
@@ -259,10 +250,10 @@ h3{
 
 
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1000px) {
     header{
-		grid-template-columns: repeat(1, 1 fr);
-		grid-template-rows: repeat(3, 1 fr);
+		grid-template-columns: auto;
+		grid-template-rows: auto;
 		grid-template-areas: 
 			"logo" 
 			"nav"
@@ -272,31 +263,41 @@ h3{
 	nav{
 		align-self: center;
 		text-align: center;
-		font-size: 1.2em;
 		padding: 2em 2em 0 2em;
+		font-size: 1.5em;
 	}
 	
 	nav ul li{
 		display: inline-block;
 		padding: 0.5em;
 	}
+	
+	nav ul li a:link {
+		padding: auto;
+	}
+	
+	h1{
+		font-size: 5vw;
+	}
 }
 
 @media only screen and (min-width: 1300px) {
     
 	header{
-		grid-template-columns: repeat(2, 1 fr);
-		grid-template-rows: repeat(2, 1 fr);
+		display: grid;
+		grid-template-columns: auto;
+		grid-template-rows: auto;
 		grid-template-areas: 
 			"logo nav"
 			"intro intro";
+		padding: 1em;
 	}
 	
 	nav{
 		align-self: end;
 		text-align: right;
-		font-size: 1.2em;
 		padding: 2em 2em 0 2em;
+		font-size: 1.2em;
 	}
 	
 	.LogoDiv{
