--- a/CSS/uxdCSS.css
+++ b/CSS/uxdCSS.css
@@ -193,12 +193,13 @@ h2{
 	display: flex;
 	justify-content: center;
 	flex-direction: column;
-	padding: 0 4vw;
+	margin: 0 4vw;
 }
 
 .imageProject{
 	align-self: center;
 	width: 300px;
+	margin: 5vw 1vw 1vw;
 }
 
 .projectTextRelated{
